예매 ajax처리 샘플

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//WebContent/WEB-INF/view/movie/reviewList.jsp=UTF-8
+encoding//WebContent/WEB-INF/view/ticket/ticket_form.jsp=UTF-8
 encoding/<project>=UTF-8
