--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,4 +1,5 @@
 eclipse.preferences.version=1
 encoding//WebContent/WEB-INF/view/movie/reviewList.jsp=UTF-8
 encoding//WebContent/WEB-INF/view/ticket/ticket_form.jsp=UTF-8
+encoding//WebContent/kcp/cfg/site_conf_inc.jsp=UTF-8
 encoding/<project>=UTF-8
